make sure site has a max-width set so it doesn't get too big

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ main{
     overflow:auto;
 }
 
+main,
+footer {
+    max-width: 1400px;
+}
+
 h1 {
     font-family: 'Droid Serif', serif;
     color:#c7a224;
